<resources>
    <string name="app_name">Groomers</string>
    <string name="title_activity_forget_pass">Forget_pass</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email or Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password</string>
    <string name="are_you_a_new_user">Are you a new user?</string>
    <string name="register">Register</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="username">Username</string>
    <string name="add_1">Add 1</string>
    <string name="add_2">Add 2</string>
    <string name="city">City</string>
    <string name="appointment">Appointment</string>
    <string name="pinCode">Pin code</string>
    <string name="welcome_new_user">Welcome New User</string>
    <string name="you_want_to_register_as_vendor">You want to Register as Vendor</string>
    <string name="sub_user">Sub user</string>
    <string name="add">Add +</string>
    <string name="continue1">Continue</string>
    <string name="business_name">Business name</string>
    <string name="your_name">Your Name</string>
    <string name="phone_number">Phone number</string>
    <string name="about_you">About you</string>
    <string name="tell_us_more_about_yourself_and_your_business">Tell us more about yourself and your business.</string>
    <string name="welcome_new_vendor">Welcome new vendor</string>
    <string name="url_link">URL link</string>
    <string name="additional_information">Additional information</string>
    <string name="upload_your_photo">Upload Your Photo</string>
    <string name="post_title">Post Title</string>
    <string name="post_description">Post Description</string>
    <string name="item_price">Item Price:-</string>
    <string name="_100">100</string>
    <string name="quantity">Quantity:-</string>
    <string name="_2">2</string>
    <string name="item_time">Item Time:-</string>
    <string name="_10pm">10pm</string>
    <string name="item_date">Item Date:-</string>
    <string name="_10_jun">10 jun</string>
    <string name="submit">Submit</string>
    <string name="orders">Orders</string>
    <string name="check_your_order_status_track_returns_cancel_etc">Check your order status (track, returns, cancel, etc)</string>
    <string name="addresses">Addresses</string>
    <string name="manage_your_saved_addresses">Manage your saved addresses</string>
    <string name="order_icon">Order Icon</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invite_friends_get_discounts">Invite friends get discounts</string>
    <string name="hello_user">Hello user!</string>
    <string name="settings">Settings</string>
    <string name="edit_update_your_account_settings">Edit/update your account settings</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="faq_contacts_us">FAQ / Contacts Us</string>
    <string name="home_type">Home Type</string>
    <string name="home_details">Home Details</string>
    <string name="enter_deatils">Enter Deatils</string>
    <string name="enter_description">Enter Description</string>
    <string name="request_for_home">Request for Home</string>
    <string name="login_in">Login In</string>
    <string name="please_fill_below_details_to_continue">Please fill below details to continue</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="log_in">Log In</string>
    <string name="new_user">New User?</string>
    <string name="create_account">Create Account</string>
    <string name="home">Home</string>
    <string name="post">Orders</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="reset">Reset</string>
    <string name="signup">Signup</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_gender">Enter Gender</string>
    <string name="enter_age">Enter age</string>
    <string name="surname">Surname</string>
    <string name="enter_surname">Enter Surname</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="street_address_line">Street Address line</string>
    <string name="landmark">Landmark</string>
    <string name="zip_code">Zip Code</string>
    <string name="register_new_user">Register New User</string>
    <string name="add_member">Add Member</string>
    <string name="my_profile">My Profile</string>
    <string name="add_post">Add Post</string>
    <string name="search">Search</string>
    <string name="dashboard">Dashboard</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="order_detail">Order Detail</string>
    <string name="no_data_found">No Data Found</string>
    <string name="order">Order</string>
    <string name="_00">00</string>
    <string name="service_date">Service Date:</string>
    <string name="_00_00_0000">00 00 0000</string>
    <string name="order_details">Order Details</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="na">Na</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="vendor">Vendor</string>
    <string name="contact_info">Contact Info</string>
    <string name="at">\@</string>
    <string name="test_gmail_com">test@gmail.com</string>
    <string name="_9887667567">9887667567</string>
    <string name="order_list">Order List</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="breed">Breed?</string>
    <string name="pet">Pet</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="entrepreneur">Entrepreneur</string>
    <string name="_503_18_ave_sw_t2s_0c6_calgary">503 18 Ave SW, T2S 0C6, Calgary</string>
    <string name="the_executive_men_s_hair_studio">The Executive Men’s Hair Studio</string>
    <string name="service">SERVICE</string>
    <string name="reviews">REVIEWS</string>
    <string name="portfolio">PORTFOLIO</string>
    <string name="details">DETAILS</string>
    <string name="popular_services">Popular Services</string>
    <string name="haircut">Haircut</string>
    <string name="classic_and_clean_40min">Classic and clean...40min</string>
    <string name="book">Book</string>
    <string name="choose_a_profile_and_groomers_will_show_you_best_options_and_services_near_by">Choose a profile and Groomers will show you best options and services near by</string>
    <string name="enter_your_mobile_number_to_finish_sign_up">Enter your mobile number</string>
    <string name="complete_profile">Complete profile</string>
    <string name="log_in_or_sign_up">Log in or sign up</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">OR</string>
    <string name="let_s_get_started_with_the_pet_s_personal_profile">Let\'s get started with the Pet\'s personal profile</string>
    <string name="let_s_get_started_with_the_personal_profile">Let\'s get started with the personal profile</string>
    <string name="what_kind_of_your_pet_is">What kind of your pet is?</string>
    <string name="review_and_confirm">Review and confirm</string>
    <string name="more_than_6_staff_members">More than 6 staff members</string>
    <string name="_4_6_staff_members">4-6 staff members</string>
    <string name="_2_3_staff_members">2-3 staff members</string>
    <string name="just_me">Just me</string>
    <string name="what_s_your_team_size">What\'s your team size?</string>
    <string name="back_arrow">Back arrow</string>
</resources>