<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        />
    <!--<item
        android:id="@+id/addPostFragment"
        android:icon="@drawable/add"
        android:title="@string/add_post"
        />-->
    <item
        android:id="@+id/orderListFragment"
        android:icon="@drawable/list"
        android:title="@string/orders"
        />
    <item
        android:id="@+id/appointmentFragment"
        android:icon="@drawable/calender"
        android:title="Appointments"
        />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/my_profile"
        />

</menu>
