<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/headerImage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:background="@drawable/rounded_background"
        android:src="@drawable/shop_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/titleSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerImage">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/shopTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_executive_men_s_hair_studio"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/shopAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_503_18_ave_sw_t2s_0c6_calgary"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ownerDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrepreneur"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_bold"
            android:text="@string/entrepreneur"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/tabLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleSection">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/service" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/reviews" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/portfolio" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details" />


    </androidx.appcompat.widget.LinearLayoutCompat>


    <LinearLayout
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        >

        <EditText

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:padding="4dp"
            android:background="@android:color/transparent"
            android:hint="Search here"

            android:textColorHint="#888888"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="7dp"
            android:src="@drawable/baseline_search_24"
            app:tint="#000000" />
    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/popularServicesSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBar">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/popularServicesHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular_services"
            android:textSize="18sp"
            android:textStyle="bold" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPopularService"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>
